# hurracloud

./: .dockerignore  .gitignore  .gitmodules  AppRunner.Dockerfile  Backup.FCStd  Case Two-part.FCStd  Case Two-part.FCStd1  Case.FCStd  Case.FCStd1  DockerDind.Dockerfile  Indexer.Dockerfile  Jawhar.Dockerfile  LICENSES  NOITCES  README.md  Samaa.Dockerfile  WebDAV.Dockerfile  Zahif.Dockerfile  build.sh  cloudbuild.yaml  deploy-src.sh  deploy.retry  deploy.yml  docker-compose.app-runner.dev.yml  docker-compose.kibana.yml  docker-compose.override.yml  docker-compose.webdav-samba.yml  docker-compose.yml  entrypoint-webdav.sh  jawhar.yaml  key  key.pub  new-k3s.sh  nginx.conf  reset.sh  sonic.cfg  start-all.sh  start.sh  sudoers  webdav.yaml
app-runner/: package.json
app-runner/client/: package-lock.json  package.json
app-runner/server/: .babelrc  HurraServer.js  constants.js  package-lock.json  package.json  server.js
app-runner/src/: App.js  (+1 more)
blockchain/substrate-node-template/pallets/hello-substrate/: Cargo.toml
blockchain/substrate-node-template/pallets/hello-substrate/src/: lib.rs
build-server/: .gitignore  build-shutdown-script.sh  build-user-data.yaml  cloudbuild.tf  codebuild.tf  download-artifacts.sh  flash-sd  hurra-build-server.tf  terraform.tfstate  terraform.tfstate.backup
cloudbuild/: cloudbuild-nginx-proxy.yaml  cloudbuild-samaa.yaml  cloudbuild.yaml  docker-compose.yml
designs/: logo.sketch  mobile.sketch
docker-syncthing/: Dockerfile  docker-compose.yml
hurra-agent/: Gemfile  Rakefile  gen-code.sh  server.go
indexer/: start.sh
jawhar/: Gemfile  Rakefile  hurra_agent.proto
k8s/: jawhar.yaml  redis.yaml  samaa.yaml  webdav.yaml  zahif.yaml
nginx-proxy/: Dockerfile  docker-compose.yml  nginx.tmpl
pcb/: design.brd  design.sch
poky/: .gitignore
samaa/: package-lock.json  package.json
samaa.old/: package.json
src/: generate-grpc-src.sh  generated-grpc-src.sh
stl/: HDD Tray Handle.stl  HDD Tray.stl  HDDTray no-slip wall.stl  SATA Plug Mount.stl  Shell - 1.stl  Shell - 2.stl  Shell - 3.stl
ui/: package.json
webdav-samba/: WebDAV.Dockerfile
yocto/: .gitignore  README.md
zahif/: start.sh
(+439 files in other folders)
